--- a/HelloJSP5/src/main/webapp/WEB-INF/web.xml
+++ b/HelloJSP5/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?> 
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" id="WebApp_ID" version="6.0">
   <display-name>HelloJSP5</display-name>
   <welcome-file-list>
@@ -9,4 +9,24 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  <context-param>
+  		<param-name>MySQLDriver</param-name> 
+  		<param-value>com.mysql.cj.jdbc.Driver</param-value>
+  	</context-param>
+	<context-param>
+  		<param-name>MySQLURL</param-name>
+  		<param-value>jdbc:mysql://localhost:3306/teampro</param-value>
+	</context-param>
+	<context-param>
+  		<param-name>MySQLId</param-name>
+  		<param-value>kosta</param-value>
+	</context-param> 
+	<context-param>
+  		<param-name>MySQLPwd</param-name>
+  		<param-value>pass123#</param-value>
+	</context-param> 
+	
+	<session-config>
+		<session-timeout>20</session-timeout>
+	</session-config>
 </web-app>
